<resources>
    <string name="app_name">Aris</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="intro_description_1">Google Developers Student Club MAIT presents Aris. Your daily guide to new events and opportunities</string>
    <string name="for_students">For Students</string>
    <string name="intro_description_2">Get fastest updates on internships &amp; job opportunities. Participate in awesome events conducted by different clubs</string>
    <string name="for_clubs">For Clubs</string>
    <string name="intro_description_3">If you are a club and want to promote your events, then this is the right place for you.</string>
    <string name="next">next</string>
    <string name="thy_name">Thy Name</string>
    <string name="full_name">Full Name</string>
    <string name="proceed">Proceed</string>
    <string name="get_started">Get Started</string>
    <string name="your_daily_news_feed">Your Daily News Feed is here</string>
    <string name="your_saved_posts">Your Saved Posts</string>
    <string name="show_saved_posts">Show Saved Posts</string>
    <string name="saved_posts">Saved Posts</string>
</resources>