<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.IntroFragment3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="340dp"
            android:scaleType="fitXY"
            android:src="@drawable/intro_img_3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/risque"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/for_clubs"
            android:textColor="@color/black"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/source_sans_pro"
            android:gravity="center"
            android:paddingStart="28dp"
            android:paddingEnd="28dp"
            android:text="@string/intro_description_3"
            android:textColor="@color/medium_grey"
            android:textSize="18sp" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/risque"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:cornerRadius="8dp" />
</RelativeLayout>