<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DailyFeedFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnSavedPosts">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:fontFamily="@font/source_sans_pro"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:fontFamily="@font/source_sans_pro"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="Aakash Gupta" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/source_sans_pro"
                android:text="@string/your_daily_news_feed"
                android:textColor="@color/medium_grey"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDailyFeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/list_item_post" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSavedPosts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/risque"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/show_saved_posts"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:cornerRadius="0dp" />
</RelativeLayout>